Responsive fix for input field on mobile

--- a/backend/static/styles/styles.scss
+++ b/backend/static/styles/styles.scss
@@ -427,6 +427,10 @@ and also iPads specifically.
 */
 @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
 
+  input[type='text'] {
+    width: 100%;
+  }
+    
   .watch-table {
     /* Force table to not be like tables anymore */
     thead, tbody, th, td, tr {
